testing/stage_15/valid/add_global_short_and_long.c
long int a=4;
short int b=2;
	
int main()
{
	
	return a+b;
}