testing/stage_15/invalid/long_char.c
int main()
{
	long char a=4;
	return a;
}